# rust-course

./: .editorconfig  Cargo.toml  README.md
client/: Cargo.toml
client/src/: args.rs  command.rs  error.rs  main.rs  send_command.rs  send_file.rs
common/: Cargo.toml
common/src/: cli.rs  lib.rs  proto.rs  tls.rs  tracing.rs
common/src/proto/: mod.rs  msg.rs  request.rs  response.rs
server/: .env  Cargo.toml  Makefile  diesel.toml  docker-compose.yml  prometheus.yml
server/migrations/2024-06-23-113533_create_message_v1/: down.sql  up.sql
server/migrations/2024-07-02-153004_add_mime/: down.sql  up.sql
server/migrations/2025-07-02-153010_foreign_keys_on_cascade_delete/: down.sql  up.sql
server/src/: args.rs  db.rs  main.rs  metrics.rs  msg_exec.rs  receive_file.rs  schema.rs
server/src/server/: handle_client.rs  listener.rs  mod.rs  run.rs  tls.rs
server/src/web/: config.rs  error.rs  mod.rs  repo.rs
server/src/web/docs/: mod.rs
server/src/web/endpoints/: delete_messages.rs  download.rs  get_messages.rs  get_metrics.rs  mod.rs
src/: cmd.rs  file_format_ops.rs  lib.rs  main.rs  simple_ops.rs
ssl/: ca.crt  ca.key  client1.crt  client1.csr  client1.key  server-localhost.bundle.crt  server-localhost.crt  server-localhost.csr  server-localhost.key
