[package]
name = "rust-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rand = {version = "0.8.5", optional = true}
slug = "0.1.5"

[features]
default = ["spongebob"]

spongebob = ["dep:rand"]
