[package]
edition = "2021"
name = "rust-course"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv = {version = "1.3.0", optional = true}
rand = {version = "0.8.5", optional = true}
slug = "0.1.5"

[features]
default = ["spongebob", "csv"]

csv = ["dep:csv"]
spongebob = ["dep:rand"]
