[package]
edition = "2021"
name = "rust-course"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "common",
  "server",
  "client",
]

[workspace.dependencies]
anyhow = "1.0"
clap = "4.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
