[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
common = {path = "../common"}

anyhow = {workspace = true}
clap = {workspace = true}
human_bytes = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}

rustls = {workspace = true, optional = true}
rustls-pemfile = {workspace = true, optional = true}
rustls-pki-types = {workspace = true, optional = true}
tokio-rustls = {workspace = true, optional = true}

[features]
default = ["mtls"]
mtls = ["rustls", "tokio-rustls", "rustls-pemfile", "rustls-pki-types", "common/tls"]
