[package]
edition = "2021"
name = "common"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
futures = {workspace = true}
serde = {workspace = true}
serde_cbor = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

rustls = {workspace = true, optional = true}
rustls-pemfile = {workspace = true, optional = true}
rustls-pki-types = {workspace = true, optional = true}
tokio-rustls = {workspace = true, optional = true}

[dev-dependencies]
proptest = "1.4"

[features]
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "rustls-pki-types"]
