[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
common = {path = "../common"}

diesel = {version = "2.1.6", features = ["postgres"]}
diesel-async = {version = "0.4.1", features = ["postgres"]}

anyhow = {workspace = true}
clap = {workspace = true}
futures = {workspace = true}
human_bytes = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
async-trait = "0.1.80"
