[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
common = {path = "../common"}

async-trait = "0.1.80"
diesel = {version = "2.1.6", features = ["postgres", "chrono", "uuid"]}
diesel-async = {version = "0.4.1", features = ["postgres"]}

anyhow = {workspace = true}
clap = {workspace = true}
futures = {workspace = true}
human_bytes = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}

chrono = "0.4.38"
dotenvy = "0.15.7"
rustls = {workspace = true, optional = true}
rustls-pemfile = {workspace = true, optional = true}
rustls-pki-types = {workspace = true, optional = true}
sha2 = "0.10.8"
tokio-rustls = {workspace = true, optional = true}
uuid = {version = "1.8.0", features = ["v4"]}
hex = "0.4.3"

[features]
default = ["mtls"]

mtls = ["rustls", "tokio-rustls", "rustls-pemfile", "rustls-pki-types", "common/tls"]
